5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1594_1800.log
== TEST (2019-03-27 13:19:40) 
-- CODE:
a=int(input("insira o valor de a: "))
b=int(input("insira o valor de b: "))
c=int(input("insira o valor de c: "))

r=(a2+b2+c2)/(a+b+c)
 print(round(x,7))
-- ERROR:
File "XXXX", line 6
    print(round(x,7))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:20:07) 
-- CODE:
a=int(input("insira o valor de a: "))
b=int(input("insira o valor de b: "))
c=int(input("insira o valor de c: "))

r=(a2+b2+c2)/(a+b+c)
print(round(x,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r=(a2+b2+c2)/(a+b+c)
NameError: name 'a2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:20:34) 
-- CODE:
a=int(input("insira o valor de a: "))
b=int(input("insira o valor de b: "))
c=int(input("insira o valor de c: "))

r=(a+b+c)/(a+b+c)
print(round(x,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(x,7))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:20:49) 
-- CODE:
a=int(input("insira o valor de a: "))
b=int(input("insira o valor de b: "))
c=int(input("insira o valor de c: "))

r=(a+b+c)/(a+b+c)
print(round(r,7))
-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:25:53) 
-- CODE:
a=int(input("insira o valor de a: "))
b=int(input("insira o valor de b: "))
c=int(input("insira o valor de c: "))

r=(a**2 + b**2 + c**2)/(a+b+c)
print(round(r,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:26:03) 
-- CODE:
a=int(input("insira o valor de a: "))
b=int(input("insira o valor de b: "))
c=int(input("insira o valor de c: "))

r=(a**2 + b**2 + c**2)/(a+b+c)
print(round(r,7))
-- EXECUTION TIME:
0.217923
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
